# stoys-python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
examples/: tutorial.ipynb
stoys/: __init__.py  config.py  init.py  pmf.py
stoys/integration/: ipython.py  notebook.py  pandas.py  pyspark.py
stoys/scala/: __init__.py  arbitrary.py  jackson.py  reflection.py  strings.py
stoys/spark/: __init__.py  datasets.py  reshape.py  reshape_config.py  spark_io.py  spark_io_config.py  table_name.py
stoys/spark/aggsum/: __init__.py  aggsum.py  aggsum_config.py  aggsum_result.py
stoys/spark/dp/: __init__.py  dp.py  dp_config.py  dp_result.py  dp_type_inference_config.py
stoys/spark/dq/: __init__.py  dq.py  dq_config.py  dq_field.py  dq_join.py  dq_join_result.py  dq_join_type.py  dq_result.py  dq_rule.py  dq_rules.py
stoys/ui/: aggsum_ui.py  dp_ui.py  dq_join_result_ui.py  dq_result_ui.py  pmf_ui.py  utils.py
stoys/utils/: case_class.py  data_types.py  json.py  jvm.py  py4j.py  python.py  scala_compat.py  spark.py  spark_session.py
tests/: conftest.py  conftest_test.py  init_test.py
tests/integration/: pandas_test.py  pyspark_test.py
tests/scala/: arbitrary_test.py  jackson_test.py
tests/utils/: json_test.py  scala_compat_test.py
